# commit-gpt

./: Cargo.toml  default.nix  flake.nix
src/: main.rs
