[package]
name = "commit-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
git2 = { version = "0.15", default-features = false }
clap = { version = "4.1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1.10.6"
thiserror = "1.0.63"

